# rsstui

./: Cargo.toml  README.md  dev.gfd.rsstui.yaml
.github/workflows/: appimage.yaml  flatpak.yaml  release-binaries.yaml
changelog/: 2026-03-06T00-00-00_initial.md  2026-03-06T00-01-00_html-rendering.md  2026-03-06T00-02-00_cross-platform-browser-open.md  2026-03-06T000000-mark-read-on-tab-to-preview.md  2026-03-06T000001-fix-read-article-selection-visibility.md  2026-03-06T000002-clamp-preview-scroll.md
etc/ci/: before_deploy.sh
src/: app.rs  error.rs  feed.rs  main.rs  markdown.rs  storage.rs  ui.rs
