[package]
name = "rsstui"
version = "0.1.1"
edition = "2021"
authors = ["Peter Grace <pete.grace@gmail.com>"]
description = "A terminal-based RSS feed reader built with ratatui."

[dependencies]
anyhow       = "1.0"
chrono       = { version = "0.4",  features = ["serde"] }
crossterm    = { version = "0.28", features = ["event-stream"] }
dotenvy        = "0.15"
feed-rs        = "2.2"
futures        = "0.3"
htmd           = "0.1"
pulldown-cmark = "0.9"
ratatui      = "0.29"
reqwest      = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde        = { version = "1.0",  features = ["derive"] }
serde_json   = "1.0"
thiserror    = "2.0"
tokio        = { version = "1",    features = ["rt-multi-thread", "macros", "time"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
